Solved the problem whereby overflow auto was causing the background to disappear in IE7.
This involved small patches to echo3 content pane components to stop setting overflow on the content pane itself and the child divs that it creates.

--- a/trunk/src/webapp/resources/css/ext-all.css
+++ b/trunk/src/webapp/resources/css/ext-all.css
@@ -14,6 +14,9 @@ caption,th{text-align:left;}
 h1,h2,h3,h4,h5,h6{font-size:100%;}
 q:before,q:after{content:'';}
 
+
+.ext-strict .ext-ie7 .x-panel-tc {overflow: visible!important;}
+
 .ext-el-mask{z-index:20000;position:absolute;top:0;left:0;-moz-opacity:0.5;opacity:.50;filter:alpha(opacity=50);background-color:#CCC;width:100%;height:100%;zoom:1;}
 .ext-el-mask-msg{z-index:20001;position:absolute;top:0;left:0;border:1px solid #6593cf;background:#c3daf9 url(../images/default/box/tb-blue.gif) repeat-x 0 -16px;padding:2px;}
 .ext-el-mask-msg div{padding:5px 10px 5px 10px;background:#eee;border:1px solid #a3bad9;color:#222;font:normal 11px tahoma,arial,helvetica,sans-serif;cursor:wait;}
@@ -851,4 +854,3 @@ body.x-body-masked .x-window-plain .x-window-mc{background:#C7D6E9;}
 .x-window-dlg .ext-mb-warning{background:transparent url(../images/default/window/icon-warning.gif) no-repeat top left;}
 .x-window-dlg .ext-mb-question{background:transparent url(../images/default/window/icon-question.gif) no-repeat top left;}
 .x-window-dlg .ext-mb-error{background:transparent url(../images/default/window/icon-error.gif) no-repeat top left;}
-
